# cron

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: winget-publishing.md
src/: main.rs  schedule.rs  store.rs
winget/: README.md  cuong21951.cron.installer.yaml  cuong21951.cron.locale.en-US.yaml  cuong21951.cron.yaml
